# hikorime

./: .gitignore  README.md  pyproject.toml  pytest.ini  relatorios.json
src/: main.py  main_cli.py
src/hikorime/cli/: comissario.py  cores.py  iniciar.py  menus.py  opcoes.py  passageiro.py  registro.py  relatorio.py  rotas.py  utils.py
src/hikorime/controller/: controller_compras.py  passagem_controller.py  registro_controller.py  root.py  rotas_auth.py  rotas_bagagem.py  rotas_base.py  rotas_comissario.py  rotas_compras.py  rotas_cupom.py  rotas_get.py  rotas_passageiro.py  rotas_passagem.py  rotas_passagens.py  rotas_registro.py  rotas_relatorios.py  rotas_voo.py  rotas_voos.py  voo_controller.py
src/hikorime/models/: bagagem.py  base_funcionario.py  base_passageiro.py  base_usuario.py  base_voo.py  cadastro_de_voo.py  compra.py  cupom.py  funcionario.py  notificacao.py  notificacaoModel.py  pagamento.py  passageiro.py  passagem.py  registro.py  tipo_pagamento.py  tipopagamento.py  visualizacao_de_voo.py  voo.py
src/hikorime/registro/: controle.py  modelos.py  service.py
src/hikorime/repository/: DatabaseConnection.py  RepositoryConnection.py  RepositoryQuerys.py  config.py  hikorime.db  repositoryConnection.py  repositoryQuerys.py  repository_Passagem.py  repository_analytics.py  repository_bagagem.py  repository_compra.py  repository_connection.py  repository_events.py  repository_passagem.py  repository_querys.py  repository_relatorio.py  schema.sql
src/hikorime/schemas/: compra_passagem.py  voo.py
src/hikorime/service/: aeronave_service.py  autenticacao.py  autenticacao_service.py  bagagem_service.py  base_service.py  cadastro_voo.py  cadastro_voo_service.py  compra_service.py  const_bagagens.py  const_voo.py  cupom_service.py  passagem_service.py  relatorio_service.py  visualizacao_de_voo.py  voo_service.py
src/hikorime/ui/: engine.py
src/tests/: test_repository.py
src/tests/test_controller/: test_rotas.py
src/tests/test_instancias/: test_funcionario.py  test_login.py  test_passageiro.py  test_usuario.py
src/tests/test_repository/: test_repository.py
src/tests/tests_unit/: test_bagagem.py  test_cupom.py
(+50 files in other folders)
