[project]
name = "hikorime"
version = "0.1.0"
description = ""
authors = [
    { name = "Aisha Tomaz", email = "aisha.tomaz@aluno.ufca.edu.br"},
    { name = "Gabriel Souza", email = "santos.gabriel@aluno.ufca.edu.br"},
    { name = "Jose Dhonatan", email = "dhonatanjose10@gmail.com"},
    { name = "Leticia Dias"},
    { name = "Sarah Mendes"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hikorime", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
